Fixed French language file

--- a/language files/announcements_fr.properties
+++ b/language files/announcements_fr.properties
@@ -1,6 +1,6 @@
 ARENA_START=Que le massacre commence!
 ARENA_END=L'arène est terminée.
-ARENA_DOES_NOT_EXIST=Cette arène n'existe pas pas.exist. Entrez "/ma arenas" pour la liste.
+ARENA_DOES_NOT_EXIST=Cette arène n'existe pas. Entrez "/ma arenas" pour la liste.
 JOIN_PLAYER_JOINED=Vous avez rejoint l'arène. Prennez plaisir!
 JOIN_NOT_ENABLED=MobArena n'est pas actif.
 JOIN_IN_OTHER_ARENA=Vous êtes déjà dans l'arène! Quittez-la avant.
@@ -14,7 +14,7 @@ JOIN_STORE_INV_FAIL=La sauvegarde de l'inventaire a échouée. Essayez encore.
 LEAVE_PLAYER_LEFT=Vous avez quitté l'arène. Merci d'avoir joué!
 LEAVE_NOT_PLAYING=Vous n'êtes pas dans l'arène.
 PLAYER_DIED=% est mort!
-SPEC_PLAYER_SPECTATE=Protiez du show!
+SPEC_PLAYER_SPECTATE=Profitez bien du spectacle!
 SPEC_NOT_RUNNING=Cette arène n'est pas en cours.
 SPEC_ARG_NEEDED=Vous devez spécifier une arène. Entrez "/ma arenas" pour la liste.
 SPEC_EMPTY_INV=Vous devez vider votre inventaire.
