Attempt at fixing language files

--- a/language files/announcements_da.properties
+++ b/language files/announcements_da.properties
@@ -1,23 +1,22 @@
-ARENA_START=Lad massakren begynde!
+ï»¿ARENA_START=Lad massakren begynde!
 ARENA_END=Arena slut.
 ARENA_DOES_NOT_EXIST=Arenaen findes ikke. Skriv /ma arenas for en liste.
 JOIN_PLAYER_JOINED=Du joinede arenaen!
 JOIN_NOT_ENABLED=MobArena er ikke aktiveret.
-JOIN_IN_OTHER_ARENA=Du er allerede i en arena. Forlad den først.
+JOIN_IN_OTHER_ARENA=Du er allerede i en arena. Forlad den fÃ¸rst.
 JOIN_ARENA_NOT_ENABLED=Arenaen er deaktiveret.
 JOIN_ARENA_NOT_SETUP=Arenaen er ikke blevet sat op endnu.
 JOIN_ARENA_IS_RUNNING=Arenaen er allerede startet.
 JOIN_ALREADY_PLAYING=Du spiller allerede!
-JOIN_ARG_NEEDED=Arenanavn påkrævet. Skriv /ma arenas for en liste.
-JOIN_EMPTY_INV=Du skal tømme dit inventory før du kan joine arenaen.
-JOIN_STORE_INV_FAIL=Kunne ikke gemme dit inventory. Prøv igen.
-LEAVE_PLAYER_LEFT=Du forlod arenaen.
-LEAVE_NOT_PLAYING=Du er ikke i en arena.
-PLAYER_DIED=% døde!
+JOIN_ARG_NEEDED=Arenanavn pÃ¥krÃ¦vet. Skriv /ma arenas for en liste.
+JOIN_EMPTY_INV=Du skal tÃ¸mme dit inventory fÃ¸r du kan joine arenaen.
+JOIN_STORE_INV_FAIL=Kunne ikke gemme dit inventory. PrÃ¸v igen.
+LEAVE_PLAYER_LEFT=Du forlod arenaen.LEAVE_NOT_PLAYING=Du er ikke i en arena.
+PLAYER_DIED=% dÃ¸de!
 SPEC_PLAYER_SPECTATE=Nyd forestillingen!
 SPEC_NOT_RUNNING=Arenaen er ikke startet.
-SPEC_ARG_NEEDED=Arenanavn påkrævet. Skriv /ma arenas for en liste.
-SPEC_EMPTY_INV=Du skal tømme dit inventory først.
+SPEC_ARG_NEEDED=Arenanavn pÃ¥krÃ¦vet. Skriv /ma arenas for en liste.
+SPEC_EMPTY_INV=Du skal tÃ¸mme dit inventory fÃ¸rst.
 SPEC_ALREADY_PLAYING=Du spiller allerede!
 NOT_READY_PLAYERS=Ikke klar: %
 FORCE_START_STARTED=Arena tvunget til at starte.
@@ -26,18 +25,18 @@ FORCE_START_NOT_READY=Ingen spillere er klar.
 FORCE_END_ENDED=Arena tvunget til at slutte.
 FORCE_END_EMPTY=Der er ingen i arenaen.
 FORCE_END_IDLE=Du var ikke hurtig nok!
-REWARDS_GIVE=Her er alle dine præmier!
+REWARDS_GIVE=Her er alle dine prÃ¦mier!
 LOBBY_CLASS_PICKED=Du har valgt % som din klasse!
 LOBBY_CLASS_PERMISSION=Du har ikke rettigheder til den klasse!
 LOBBY_PLAYER_READY=Du er markeret som klar!
 LOBBY_DROP_ITEM=Du kan ikke dele items i lobbyen!
-LOBBY_PICK_CLASS=Du skal først vælge en klasse!
-LOBBY_RIGHT_CLICK=Slå skiltene; ikke højre-klik.
-WARP_TO_ARENA=Du kan ikke warpe til arenaen mens den kører.
+LOBBY_PICK_CLASS=Du skal fÃ¸rst vÃ¦lge en klasse!
+LOBBY_RIGHT_CLICK=SlÃ¥ skiltene; ikke hÃ¸jre-klik.
+WARP_TO_ARENA=Du kan ikke warpe til arenaen efter den er startet.
 WARP_FROM_ARENA=Du kan ikke warpe fra arenaen.
-WAVE_DEFAULT=Bølge #%!
-WAVE_SPECIAL=Bølge #%! [SPECIEL]
-WAVE_REWARD=Du har lige fået en præmie: %
+WAVE_DEFAULT=BÃ¸lge #%!
+WAVE_SPECIAL=BÃ¸lge #%! [SPECIEL]
+WAVE_REWARD=Du har lige fÃ¥et en prÃ¦mie: %
 MISC_LIST_ARENAS=Arenaer: %
 MISC_LIST_PLAYERS=Levende spillere: %
 MISC_COMMAND_NOT_ALLOWED=Du kan ikke bruge den kommando i arenaen.
