--- a/language files/announcements_da.properties
+++ b/language files/announcements_da.properties
@@ -11,7 +11,8 @@ JOIN_ALREADY_PLAYING=Du spiller allerede!
 JOIN_ARG_NEEDED=Arenanavn påkrævet. Skriv /ma arenas for en liste.
 JOIN_EMPTY_INV=Du skal tømme dit inventory før du kan joine arenaen.
 JOIN_STORE_INV_FAIL=Kunne ikke gemme dit inventory. Prøv igen.
-LEAVE_PLAYER_LEFT=Du forlod arenaen.LEAVE_NOT_PLAYING=Du er ikke i en arena.
+LEAVE_PLAYER_LEFT=Du forlod arenaen.
+LEAVE_NOT_PLAYING=Du er ikke i en arena.
 PLAYER_DIED=% døde!
 SPEC_PLAYER_SPECTATE=Nyd forestillingen!
 SPEC_NOT_RUNNING=Arenaen er ikke startet.
