Fixed language packs

--- a/language files/announcements_da.properties
+++ b/language files/announcements_da.properties
@@ -33,12 +33,12 @@ LOBBY_PLAYER_READY=Du er markeret som klar!
 LOBBY_DROP_ITEM=Du kan ikke dele items i lobbyen!
 LOBBY_PICK_CLASS=Du skal først vælge en klasse!
 LOBBY_RIGHT_CLICK=Slå skiltene; ikke højre-klik.
-WARP_TO_ARENA=Du kan ikke warpe til arenaen efter den er startet.
+WARP_TO_ARENA=Du kan ikke warpe til arenaen efter, den er startet.
 WARP_FROM_ARENA=Du kan ikke warpe fra arenaen.
 WAVE_DEFAULT=Bølge #%!
 WAVE_SPECIAL=Bølge #%! [SPECIEL]
-WAVE_REWARD=Du har lige fået en præmie: %
-MISC_LIST_ARENAS=Arenaer: %
+WAVE_REWARD=Du har lige vundet en præmie: %
+MISC_LIST_ARENAS=Tilgængelige arenaer: %
 MISC_LIST_PLAYERS=Levende spillere: %
 MISC_COMMAND_NOT_ALLOWED=Du kan ikke bruge den kommando i arenaen.
 MISC_NO_ACCESS=Du har ikke adgang til den kommando.
