--- a/language files/announcements_da.properties
+++ b/language files/announcements_da.properties
@@ -9,6 +9,7 @@ JOIN_ARENA_NOT_SETUP=Arenaen er ikke blevet sat op endnu.
 JOIN_ARENA_IS_RUNNING=Arenaen er allerede startet.
 JOIN_ALREADY_PLAYING=Du spiller allerede!
 JOIN_ARG_NEEDED=Arenanavn påkrævet. Skriv /ma arenas for en liste.
+JOIN_PLAYER_LIMIT_REACHED=Der kan ikke være flere spillere i arenaen.
 JOIN_EMPTY_INV=Du skal tømme dit inventory før du kan joine arenaen.
 JOIN_STORE_INV_FAIL=Kunne ikke gemme dit inventory. Prøv igen.
 LEAVE_PLAYER_LEFT=Du forlod arenaen.
