--- a/language files/announcements_fr.properties
+++ b/language files/announcements_fr.properties
@@ -9,6 +9,7 @@ JOIN_ARENA_NOT_SETUP=Cette arène n'a pas encore été configurée.
 JOIN_ARENA_IS_RUNNING=L'arène est déjà occupée.
 JOIN_ALREADY_PLAYING=Vous êtes déjà en train de jouer.
 JOIN_ARG_NEEDED=Vous devez spécifier une arène. Entrez "/ma arenas" pour la liste.
+JOIN_PLAYER_LIMIT_REACHED=La limite de joueur pour cette arène a été atteinte.
 JOIN_EMPTY_INV=Vous devez vider votre inventaire afin de joindre l'arène.
 JOIN_STORE_INV_FAIL=La sauvegarde de l'inventaire a échouée. Essayez encore.
 LEAVE_PLAYER_LEFT=Vous avez quitté l'arène. Merci d'avoir joué !
