--- a/language files/announcements_da.properties
+++ b/language files/announcements_da.properties
@@ -6,11 +6,13 @@ JOIN_NOT_ENABLED=MobArena er ikke aktiveret.
 JOIN_IN_OTHER_ARENA=Du er allerede i en arena. Forlad den først.
 JOIN_ARENA_NOT_ENABLED=Arenaen er deaktiveret.
 JOIN_ARENA_NOT_SETUP=Arenaen er ikke blevet sat op endnu.
+JOIN_ARENA_PERMISSION=Du har ikke rettigheder til den arena!
 JOIN_ARENA_IS_RUNNING=Arenaen er allerede startet.
 JOIN_ALREADY_PLAYING=Du spiller allerede!
 JOIN_ARG_NEEDED=Arenanavn påkrævet. Skriv /ma arenas for en liste.
-JOIN_PLAYER_LIMIT_REACHED=Der kan ikke være flere spillere i arenaen.
+JOIN_TOO_FAR=Du er for langt fra denne arena til at kunne joine.
 JOIN_EMPTY_INV=Du skal tømme dit inventory før du kan joine arenaen.
+JOIN_PLAYER_LIMIT_REACHED=Der kan ikke være flere spillere i arenaen.
 JOIN_STORE_INV_FAIL=Kunne ikke gemme dit inventory. Prøv igen.
 LEAVE_PLAYER_LEFT=Du forlod arenaen.
 LEAVE_NOT_PLAYING=Du er ikke i en arena.
@@ -29,6 +31,7 @@ FORCE_END_EMPTY=Der er ingen i arenaen.
 FORCE_END_IDLE=Du var ikke hurtig nok!
 REWARDS_GIVE=Her er alle dine præmier!
 LOBBY_CLASS_PICKED=Du har valgt % som din klasse!
+LOBBY_CLASS_RANDOM=Du får tildelt en klasse ved arena start.
 LOBBY_CLASS_PERMISSION=Du har ikke rettigheder til den klasse!
 LOBBY_PLAYER_READY=Du er markeret som klar!
 LOBBY_DROP_ITEM=Du kan ikke dele items i lobbyen!
