--- a/language files/announcements_fr.properties
+++ b/language files/announcements_fr.properties
@@ -6,11 +6,13 @@ JOIN_NOT_ENABLED=MobArena n'est pas actif.
 JOIN_IN_OTHER_ARENA=Vous êtes déjà dans l'arène! Quittez-la avant.
 JOIN_ARENA_NOT_ENABLED=Cetta arène n'est pas active.
 JOIN_ARENA_NOT_SETUP=Cette arène n'a pas encore été configurée.
+JOIN_ARENA_PERMISSION=Vous n'avez pas la permission pour rejoindre cette arène.
 JOIN_ARENA_IS_RUNNING=L'arène est déjà occupée.
 JOIN_ALREADY_PLAYING=Vous êtes déjà en train de jouer.
 JOIN_ARG_NEEDED=Vous devez spécifier une arène. Entrez "/ma arenas" pour la liste.
-JOIN_PLAYER_LIMIT_REACHED=La limite de joueur pour cette arène a été atteinte.
+JOIN_TOO_FAR=Vous êtes trop loins de l'arène pour pouvoir joindre en tant que joueur ou specateur.
 JOIN_EMPTY_INV=Vous devez vider votre inventaire afin de joindre l'arène.
+JOIN_PLAYER_LIMIT_REACHED=La limite de joueur pour cette arène a été atteinte.
 JOIN_STORE_INV_FAIL=La sauvegarde de l'inventaire a échouée. Essayez encore.
 LEAVE_PLAYER_LEFT=Vous avez quitté l'arène. Merci d'avoir joué !
 LEAVE_NOT_PLAYING=Vous n'êtes pas dans l'arène.
@@ -29,7 +31,8 @@ FORCE_END_EMPTY=Il n'y a personne dans l'arène.
 FORCE_END_IDLE=Vous n'avez pas été assez rapide !
 REWARDS_GIVE=Voici vos récompenses !
 LOBBY_CLASS_PICKED=Vous avez choisi % comme classe !
-LOBBY_CLASS_PERMISSION=Vous n'avez pas les permissions pour utiliser cette classe!
+LOBBY_CLASS_RANDOM=Une classe aléatoire va vous être attribuée.
+LOBBY_CLASS_PERMISSION=Vous n'avez pas les permissions pour utiliser cette classe !
 LOBBY_PLAYER_READY=Vous avez été marqué comme prêt !
 LOBBY_DROP_ITEM=Pas de partage avant le début de l'arène !
 LOBBY_PICK_CLASS=Vous devez d'abord choisir une classe !
