--- a/language files/announcements_da.properties
+++ b/language files/announcements_da.properties
@@ -7,6 +7,8 @@ JOIN_IN_OTHER_ARENA=Du er allerede i en arena. Forlad den først.
 JOIN_ARENA_NOT_ENABLED=Arenaen er deaktiveret.
 JOIN_ARENA_NOT_SETUP=Arenaen er ikke blevet sat op endnu.
 JOIN_ARENA_PERMISSION=Du har ikke rettigheder til den arena!
+JOIN_FEE_REQUIRED=Du er for fattig. Pris: %
+JOIN_FEE_PAID=Prisen for at joine var: %
 JOIN_ARENA_IS_RUNNING=Arenaen er allerede startet.
 JOIN_ALREADY_PLAYING=Du spiller allerede!
 JOIN_ARG_NEEDED=Arenanavn påkrævet. Skriv /ma arenas for en liste.
