--- a/language files/announcements_fr.properties
+++ b/language files/announcements_fr.properties
@@ -7,6 +7,8 @@ JOIN_IN_OTHER_ARENA=Vous êtes déjà dans l'arène! Quittez-la avant.
 JOIN_ARENA_NOT_ENABLED=Cetta arène n'est pas active.
 JOIN_ARENA_NOT_SETUP=Cette arène n'a pas encore été configurée.
 JOIN_ARENA_PERMISSION=Vous n'avez pas la permission pour rejoindre cette arène.
+JOIN_FEE_REQUIRED=Pas assez d'argent. Prix: %
+JOIN_FEE_PAID=Le prix pour rejoindre était de: %
 JOIN_ARENA_IS_RUNNING=L'arène est déjà occupée.
 JOIN_ALREADY_PLAYING=Vous êtes déjà en train de jouer.
 JOIN_ARG_NEEDED=Vous devez spécifier une arène. Entrez "/ma arenas" pour la liste.
