--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Go to the Wiki for more info: https://github.com/garbagemule/MobArena/wiki/dev-v0.94
+Please read the [Wiki](https://github.com/garbagemule/MobArena/wiki/Installing-MobArena) for details on how to set up MobArena, and remember to read the [FAQ](https://github.com/garbagemule/MobArena/wiki/FAQ) before posting questions!
