--- a/language files/announcements_da.properties
+++ b/language files/announcements_da.properties
@@ -1,11 +1,11 @@
-﻿ARENA_START=Lad massakren begynde!
+ARENA_START=Lad massakren begynde!
 ARENA_END=Arena slut.
 ARENA_DOES_NOT_EXIST=Arenaen findes ikke. Skriv /ma arenas for en liste.
-JOIN_PLAYER_JOINED=Du joinede arenaen!
 JOIN_NOT_ENABLED=MobArena er ikke aktiveret.
 JOIN_IN_OTHER_ARENA=Du er allerede i en arena. Forlad den først.
 JOIN_ARENA_NOT_ENABLED=Arenaen er deaktiveret.
 JOIN_ARENA_NOT_SETUP=Arenaen er ikke blevet sat op endnu.
+JOIN_ARENA_EDIT_MODE=Denne arena er ved at blive redigeret
 JOIN_ARENA_PERMISSION=Du har ikke rettigheder til den arena!
 JOIN_FEE_REQUIRED=Du er for fattig. Pris: %
 JOIN_FEE_PAID=Prisen for at joine var: %
@@ -16,8 +16,10 @@ JOIN_TOO_FAR=Du er for langt fra denne arena til at kunne joine.
 JOIN_EMPTY_INV=Du skal tømme dit inventory før du kan joine arenaen.
 JOIN_PLAYER_LIMIT_REACHED=Der kan ikke være flere spillere i arenaen.
 JOIN_STORE_INV_FAIL=Kunne ikke gemme dit inventory. Prøv igen.
-LEAVE_PLAYER_LEFT=Du forlod arenaen.
+JOIN_EXISTING_INV_RESTORED=Your old inventory items have been restored
+JOIN_PLAYER_JOINED=Du joinede arenaen!
 LEAVE_NOT_PLAYING=Du er ikke i en arena.
+LEAVE_PLAYER_LEFT=Du forlod arenaen.
 PLAYER_DIED=% døde!
 SPEC_PLAYER_SPECTATE=Nyd forestillingen!
 SPEC_NOT_RUNNING=Arenaen er ikke startet.
@@ -25,27 +27,32 @@ SPEC_ARG_NEEDED=Arenanavn påkrævet. Skriv /ma arenas for en liste.
 SPEC_EMPTY_INV=Du skal tømme dit inventory først.
 SPEC_ALREADY_PLAYING=Du spiller allerede!
 NOT_READY_PLAYERS=Ikke klar: %
-FORCE_START_STARTED=Arena tvunget til at starte.
 FORCE_START_RUNNING=Arenaen er allerede startet.
 FORCE_START_NOT_READY=Ingen spillere er klar.
-FORCE_END_ENDED=Arena tvunget til at slutte.
+FORCE_START_STARTED=Arena tvunget til at starte.
 FORCE_END_EMPTY=Der er ingen i arenaen.
+FORCE_END_ENDED=Arena tvunget til at slutte.
 FORCE_END_IDLE=Du var ikke hurtig nok!
 REWARDS_GIVE=Her er alle dine præmier!
+LOBBY_DROP_ITEM=Du kan ikke dele items i lobbyen!
+LOBBY_PLAYER_READY=Du er markeret som klar!
+LOBBY_PICK_CLASS=Du skal først vælge en klasse!
+LOBBY_NOT_ENOUGH_PLAYERS=Der er ikke nok spillere til at starte. Der skal mindst være % spillere.
+LOBBY_RIGHT_CLICK=Slå skiltene; ikke højre-klik.
 LOBBY_CLASS_PICKED=Du har valgt % som din klasse!
 LOBBY_CLASS_RANDOM=Du får tildelt en klasse ved arena start.
 LOBBY_CLASS_PERMISSION=Du har ikke rettigheder til den klasse!
-LOBBY_PLAYER_READY=Du er markeret som klar!
-LOBBY_DROP_ITEM=Du kan ikke dele items i lobbyen!
-LOBBY_PICK_CLASS=Du skal først vælge en klasse!
-LOBBY_RIGHT_CLICK=Slå skiltene; ikke højre-klik.
 WARP_TO_ARENA=Du kan ikke warpe til arenaen efter, den er startet.
 WARP_FROM_ARENA=Du kan ikke warpe fra arenaen.
 WAVE_DEFAULT=Bølge #%!
 WAVE_SPECIAL=Bølge #%! [SPECIEL]
+WAVE_SWARM=Bølge #%! [SWARM]|Bølge #%! [SWARM]
+WAVE_BOSS=Bølge #%! [BOSS]|Bølge #%! [BOSS]
+WAVE_BOSS_ABILITY=Boss brugte: %!|Boss: %
+WAVE_BOSS_LOW_HEALTH=Boss er næsten død!
 WAVE_REWARD=Du har lige vundet en præmie: %
-MISC_LIST_ARENAS=Tilgængelige arenaer: %
 MISC_LIST_PLAYERS=Levende spillere: %
+MISC_LIST_ARENAS=Tilgængelige arenaer: %
 MISC_COMMAND_NOT_ALLOWED=Du kan ikke bruge den kommando i arenaen.
 MISC_NO_ACCESS=Du har ikke adgang til den kommando.
 MISC_NONE=<ingen>
